--- a/resource/css/main.css
+++ b/resource/css/main.css
@@ -1,2 +1,3 @@
-#audio { width: 100%; margin: 0 auto; }
-body { padding-top: 70px; }
+#audio { width: 100%; min-height: 30px; }
+#audio_container { padding-top: 10px; }
+body { padding-top: 60px; }
